# react-native-skia-module

./: .gitmodules  README.md  package.json
example/: App.tsx  app.json  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: _BUCK  build.gradle
example/android/app/src/debug/java/com/examplev068/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/examplev068/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/examplev068/newarchitecture/: MainApplicationReactNativeHost.java
example/android/app/src/main/java/com/examplev068/newarchitecture/components/: MainComponentsRegistry.java
example/android/app/src/main/java/com/examplev068/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
example/android/app/src/main/jni/: Android.mk  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/exampleV068/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/exampleV068.xcodeproj/: project.pbxproj
example/ios/exampleV068.xcodeproj/xcshareddata/xcschemes/: exampleV068.xcscheme
example/ios/exampleV068.xcworkspace/: contents.xcworkspacedata
example/ios/exampleV068Tests/: exampleV068Tests.m
module/: .gitignore  package.json  react-native-skia-module.podspec  tsconfig.json
module/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
module/android/src/main/: AndroidManifest.xml
module/android/src/main/java/com/reactnativeskiamodule/: SkiaModuleModule.java  SkiaModulePackage.java
module/cpp/: JsiSkSkottie.h  react-native-skia-module.cpp  react-native-skia-module.h
module/ios/: SkiaModule.h  SkiaModule.mm
module/ios/SkiaModule.xcodeproj/: project.pbxproj
module/src/: index.tsx
scripts/: build-skia-skottie-android.ts
